--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                 <button id="toggleGrid" onclick="toggleGrid()">Toggle grid</button>
             </label>
             <br>
-            <button class="colorBtn" onclick="colorBlue()">blue</button>
-            <button class="colorBtn" onclick="colorRed()">red</button>
-            <button class="colorBtn" onclick="colorGreen()">green</button>
-            <button class="colorBtn" onclick="colorYellow()">yellow</button>
-            <button class="colorBtn" onclick="colorRandom()">random</button>
+            <div id="colorDiv">
+                <button class="colorBtn" onclick="colorBlue()">blue</button>
+                <button class="colorBtn" onclick="colorRed()">red</button>
+                <button class="colorBtn" onclick="colorGreen()">green</button>
+                <button class="colorBtn" onclick="colorYellow()">yellow</button>
+                <button class="colorBtn" onclick="colorRandom()">random</button>
+            </div>
         </div>
 
         <div id="container"></div>
